// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attribute.hbs - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<div title='

  a title with random


  newlines'></div>

<div TITLE='

  a title with random


  newlines'></div>

<div title='

  a title with random


  newlines
  and {{mustaches}}

'></div>

<div TITLE='

  a title with random


  newlines
  and {{mustaches}}

'></div>

=====================================output=====================================
<div title='

  a title with random


  newlines'></div>

<div TITLE='

  a title with random


  newlines'></div>

<div title='

  a title with random


  newlines
  and {{mustaches}}

'></div>

<div TITLE='

  a title with random


  newlines
  and {{mustaches}}

'></div>
================================================================================
`;

exports[`attribute.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div title='

  a title with random


  newlines'></div>

<div TITLE='

  a title with random


  newlines'></div>

<div title='

  a title with random


  newlines
  and {{mustaches}}

'></div>

<div TITLE='

  a title with random


  newlines
  and {{mustaches}}

'></div>

=====================================output=====================================
<div title="

  a title with random


  newlines"></div>

<div TITLE="

  a title with random


  newlines"></div>

<div title="

  a title with random


  newlines
  and {{mustaches}}

"></div>

<div TITLE="

  a title with random


  newlines
  and {{mustaches}}

"></div>
================================================================================
`;

exports[`brackets.hbs - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<div title='My title'></div>
<div title="My title"></div>
<div title='My "title"'></div>
<div title="My other 'title'"></div>

=====================================output=====================================
<div title='My title'></div>
<div title='My title'></div>
<div title='My "title"'></div>
<div title="My other 'title'"></div>
================================================================================
`;

exports[`brackets.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div title='My title'></div>
<div title="My title"></div>
<div title='My "title"'></div>
<div title="My other 'title'"></div>

=====================================output=====================================
<div title="My title"></div>
<div title="My title"></div>
<div title='My "title"'></div>
<div title="My other 'title'"></div>
================================================================================
`;

exports[`class.hbs - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<div class='class and other'></div>
<div class=' class and other '></div>
<div CLASs=' class and other '></div>

=====================================output=====================================
<div class='class and other'></div>
<div class='class and other'></div>
<div CLASs='class and other'></div>
================================================================================
`;

exports[`class.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div class='class and other'></div>
<div class=' class and other '></div>
<div CLASs=' class and other '></div>

=====================================output=====================================
<div class="class and other"></div>
<div class="class and other"></div>
<div CLASs="class and other"></div>
================================================================================
`;
